# Movie-QA-Service

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml
.cursor/: CURSOR_RULES_README.md
.cursor/rules/: 00-core.mdc  10-java-spring-boot.mdc  20-python-fastapi.mdc  30-frontend-react.mdc  40-rag-engineering.mdc  50-event-driven.mdc  60-testing.mdc  70-process-and-discipline.mdc
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: math.test.ts
frontend/src/test/: setup.ts
infra/nginx/: nginx.conf
infra/postgres/init/: 01-create-schemas.sql
services/auth/: pom.xml
services/auth/src/main/java/com/movieqa/auth/: AuthApplication.java
services/auth/src/main/resources/: application.yml
services/auth/src/test/java/com/movieqa/auth/: AuthApplicationTests.java
services/catalog/: pom.xml
services/catalog/src/main/java/com/movieqa/catalog/: CatalogApplication.java
services/catalog/src/main/resources/: application.yml
services/catalog/src/test/java/com/movieqa/catalog/: CatalogApplicationTests.java
services/chat/: pom.xml
services/chat/src/main/java/com/movieqa/chat/: ChatApplication.java
services/chat/src/main/resources/: application.yml
services/chat/src/test/java/com/movieqa/chat/: ChatApplicationTests.java
services/rag/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/rag/src/rag/: __init__.py  config.py  main.py
services/rag/tests/: test_health.py
services/scheduler/: pom.xml
services/scheduler/src/main/java/com/movieqa/scheduler/: SchedulerApplication.java
services/scheduler/src/main/resources/: application.yml
services/scheduler/src/test/java/com/movieqa/scheduler/: SchedulerApplicationTests.java
